# youtube-music-takeaway-sorter

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  yt-sorter.py
.github/workflows/: main.yml
src/: config.py  csv.py  metadata.py  mover.py  progress_bar.py  sorter.py  track_files.py
src/lib/: logging.py
tests/: test_config.py  test_csv.py  test_mover.py  test_sorter.py  test_track_files.py
