[tool.poetry]
name = "yt-music-sorter"
version = "0.1.0"
description = "Sorts YouTube Music Google Takeout extracts"
authors = ["Lewis England <lewis2004@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
eyed3 = "^0.9.6"
fleep = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.7b0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
